--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-テスト
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Page</title>
+</head>
+<body>
+  <p>テストページ：page.html</p>
+</body>
+</html>
