--- a/admin-index.html
+++ b/admin-index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #667eea, #764ba2);
+      background: linear-gradient(135deg, #6dd5ed, #2193b0);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -16,70 +16,89 @@
       margin: 0;
     }
     .login-container {
-      background: #ffffff;
+      background-color: #fff;
       padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-      width: 300px;
+      border-radius: 1rem;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+      width: 100%;
+      max-width: 400px;
     }
     h2 {
       text-align: center;
-      color: #333333;
+      margin-bottom: 1.5rem;
+      color: #333;
     }
-    input[type="email"],
-    input[type="password"] {
+    label {
+      display: block;
+      margin-bottom: 0.5rem;
+      color: #555;
+    }
+    input {
       width: 100%;
-      padding: 0.8rem;
-      margin: 0.5rem 0;
+      padding: 0.75rem;
+      margin-bottom: 1.25rem;
       border: 1px solid #ccc;
-      border-radius: 6px;
+      border-radius: 0.5rem;
       font-size: 1rem;
     }
     button {
       width: 100%;
-      padding: 0.8rem;
-      background-color: #667eea;
-      color: white;
+      padding: 0.75rem;
+      background-color: #2193b0;
+      color: #fff;
       border: none;
-      border-radius: 6px;
+      border-radius: 0.5rem;
       font-size: 1rem;
       cursor: pointer;
+      transition: background-color 0.3s ease;
     }
     button:hover {
-      background-color: #556cd6;
+      background-color: #176b87;
+    }
+    .error {
+      color: red;
+      text-align: center;
+      margin-top: 0.5rem;
     }
   </style>
+  <script type="module">
+    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+
+    const supabaseUrl = 'https://udcrfwejohzmhfojnwha.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVkY3Jmd2Vqb2h6bWhmb2pud2hhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU5ODk1NzgsImV4cCI6MjA2MTU2NTU3OH0.dqy_L8iPlbUDoozkha4yjar4ADvinxGc0a6ygSuBLQI';
+    const supabase = createClient(supabaseUrl, supabaseKey);
+
+    async function login() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      const errorDiv = document.getElementById("error");
+
+      const { data, error } = await supabase.auth.signInWithPassword({
+        email: email,
+        password: password
+      });
+
+      if (error) {
+        console.error(error.message);
+        errorDiv.textContent = "ログインに失敗しました：" + error.message;
+      } else {
+        localStorage.setItem("wajuhp_admin_auth", "true");
+        window.location.href = "admin-top.html";
+      }
+    }
+
+    window.login = login;
+  </script>
 </head>
 <body>
   <div class="login-container">
     <h2>管理者ログイン</h2>
-    <input type="email" id="email" placeholder="メールアドレス" required />
+    <label for="email">メールアドレス</label>
+    <input type="email" id="email" placeholder="admin@example.com" required />
+    <label for="password">パスワード</label>
     <input type="password" id="password" placeholder="パスワード" required />
     <button onclick="login()">ログイン</button>
+    <div class="error" id="error"></div>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script>
-    const supabase = supabase.createClient(
-      'https://udcrfwejohzmhfojnwha.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVkY3Jmd2Vqb2h6bWhmb2pud2hhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU5ODk1NzgsImV4cCI6MjA2MTU2NTU3OH0.dqy_L8iPlbUDoozkha4yjar4ADvinxGc0a6ygSuBLQI'
-    );
-
-    async function login() {
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-
-      const { data, error } = await supabase.auth.signInWithPassword({
-        email,
-        password
-      });
-
-      if (error) {
-        alert('ログインに失敗しました：' + error.message);
-      } else {
-        window.location.href = 'admin-top.html';
-      }
-    }
-  </script>
 </body>
 </html>
