--- a/admin-top.html
+++ b/admin-top.html
@@ -44,11 +44,6 @@
       background: #f9fafb;
       overflow-y: auto;
     }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
   </style>
 </head>
 <body>
@@ -70,29 +65,31 @@
   </main>
 
   <script type="module">
-    // Supabase認証チェック
     import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
-    const supabase = createClient("https://YOUR_PROJECT_ID.supabase.co", "YOUR_ANON_KEY");
+    const supabaseUrl = "https://udcrfwejohzmhfojnwha.supabase.co";
+    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVkY3Jmd2Vqb2h6bWhmb2pud2hhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU5ODk1NzgsImV4cCI6MjA2MTU2NTU3OH0.dqy_L8iPlbUDoozkha4yjar4ADvinxGc0a6ygSuBLQI";
+    const supabase = createClient(supabaseUrl, supabaseKey);
 
-    const adminAuth = localStorage.getItem("waju_admin_auth");
-    if (!adminAuth) {
-      window.location.href = "admin-index.html";
-    }
-
-    async function verifyAdmin() {
-      const { data, error } = await supabase
+    async function checkAuth() {
+      const { data: { session }, error } = await supabase.auth.getSession();
+      if (!session) {
+        window.location.href = "admin-index.html";
+        return;
+      }
+      const userEmail = session.user.email;
+      const { data: admin, error: adminError } = await supabase
         .from("admins")
         .select("*")
-        .eq("id", adminAuth)
+        .eq("email", userEmail)
         .single();
-      if (error || !data) {
-        localStorage.removeItem("waju_admin_auth");
+
+      if (!admin || adminError) {
         window.location.href = "admin-index.html";
       }
     }
-    verifyAdmin();
 
-    // ページ読み込み
+    checkAuth();
+
     async function loadPage(url) {
       const response = await fetch(url);
       const html = await response.text();
@@ -101,4 +98,3 @@
   </script>
 </body>
 </html>
-
