--- a/admin-top.html
+++ b/admin-top.html
@@ -1,100 +1,53 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>管理者ダッシュボード</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>管理者ページ</title>
   <style>
     body {
+      font-family: 'Arial', sans-serif;
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      height: 100vh;
+      padding: 0;
+      background: linear-gradient(to right, #eef2f3, #8e9eab);
+      color: #333;
     }
-    aside {
-      width: 240px;
-      background: #1f2937;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      padding: 20px 10px;
-    }
-    aside h2 {
-      font-size: 20px;
-      margin-bottom: 20px;
+    header {
+      background-color: #1f2937;
+      color: white;
+      padding: 1rem 2rem;
       text-align: center;
     }
-    aside button {
-      background: none;
-      color: #fff;
-      border: none;
-      padding: 10px;
-      text-align: left;
-      cursor: pointer;
-      transition: background 0.2s;
-      border-radius: 5px;
-      margin-bottom: 5px;
-    }
-    aside button:hover {
-      background: #374151;
-    }
     main {
-      flex-grow: 1;
-      padding: 30px;
-      background: #f9fafb;
-      overflow-y: auto;
+      padding: 2rem;
     }
   </style>
-</head>
-<body>
-  <aside>
-    <h2>管理メニュー</h2>
-    <button onclick="loadPage('admin-menu.html')">① 管理メニュー管理</button>
-    <button onclick="loadPage('admin-pages.html')">② サイトページ管理</button>
-    <button onclick="loadPage('admin-editor.html')">③ サイトページ編集</button>
-    <button onclick="loadPage('admin-blogs.html')">④ ブログ一覧</button>
-    <button onclick="loadPage('admin-blog-edit.html')">⑤ ブログ追加・編集</button>
-    <button onclick="loadPage('admin-contact.html')">⑥ お問い合わせ管理</button>
-    <button onclick="loadPage('admin-analytics.html')">⑦ アクセス解析</button>
-    <button onclick="loadPage('admin-assets.html')">⑧ アセット管理</button>
-    <button onclick="loadPage('admin-settings.html')">⑨ 設定管理</button>
-    <button onclick="loadPage('admin-password.html')">⑩ パスワード変更</button>
-  </aside>
-  <main>
-    <div id="main-content">ここに管理ページの内容が表示されます</div>
-  </main>
-
   <script type="module">
     import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
-    const supabaseUrl = "https://htnmjsqgoapvuanrsuma.supabase.co";
-    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA";
+
+    const supabaseUrl = 'https://htnmjsqgoapvuanrsuma.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA';
     const supabase = createClient(supabaseUrl, supabaseKey);
 
-    async function checkAuth() {
-      const { data: { session }, error } = await supabase.auth.getSession();
+    supabase.auth.getSession().then(({ data: { session } }) => {
       if (!session) {
+        console.log("未ログイン状態。ログインページにリダイレクト");
         window.location.href = "admin-index.html";
-        return;
+      } else {
+        console.log("ログイン済みユーザー:", session.user.email);
+        document.getElementById("admin-content").textContent =
+          session.user.email + " としてログイン中です";
       }
-      const userEmail = session.user.email;
-      const { data: admin, error: adminError } = await supabase
-        .from("admins")
-        .select("*")
-        .eq("email", userEmail)
-        .single();
-
-      if (!admin || adminError) {
-        window.location.href = "admin-index.html";
-      }
-    }
-
-    checkAuth();
-
-    async function loadPage(url) {
-      const response = await fetch(url);
-      const html = await response.text();
-      document.getElementById("main-content").innerHTML = html;
-    }
+    });
   </script>
+</head>
+<body>
+  <header>
+    <h1>管理者ダッシュボード</h1>
+  </header>
+  <main>
+    <p id="admin-content">セッションを確認中...</p>
+  </main>
 </body>
 </html>
